# delta_export

./: CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  description.yml  export.sql  extension_config.cmake  vcpkg.json
.github/workflows/: IntegrationTest.yml  LinuxBuild.yml  MainDistributionPipeline.yml
src/: delta_export_extension.cpp
src/include/: delta_export_extension.hpp
test/python/: conftest.py  test_delta_export.py
test/sql/: delta_export.test
